@@ -26,7 +26,7 @@ debian-stable-codename)
 ubuntu-codename)
 	getrawfield 'ubuntu-codename' "${BASEDIR}/../doc/apt-verbatim.ent"
 	;;
-keyring-package|keyring-filename|keyring-master-filename|keyring-removed-filename|keyring-uri)
+keyring-package|keyring-filename|keyring-master-filename|keyring-removed-filename|keyring-uri|current-distro-codename)
 	getfield "$1"
 	;;
 *)
