@@ -1,0 +1,8 @@
+<!-- details about the keys used by the distribution -->
+<!ENTITY keyring-distro "SteamOS">
+<!ENTITY keyring-package "<package>valve-archive-keyring</package>">
+<!ENTITY keyring-filename "<filename>/usr/share/keyrings/valve-archive-keyring.gpg</filename>">
+<!ENTITY keyring-removed-filename "<filename>/usr/share/keyrings/valve-archive-removed-keys.gpg</filename>">
+<!ENTITY current-distro-codename "alchemist">
+<!ENTITY keyring-master-filename "">
+<!ENTITY keyring-uri "">
