@@ -1,0 +1,7 @@
+# See sources.list(5) manpage for more information
+# Remember that CD-ROMs, DVDs and such are managed through the apt-cdrom tool.
+
+deb http://repo.steampowered.com/steamos &steamos-codename; main contrib non-free
+deb-src http://repo.steampowered.com/steamos &steamos-codename; main contrib non-free
+
+deb http://cdn.debian.net/debian &stable-codename; main
