@@ -9,6 +9,8 @@ apt (0.9.14.2) UNRELEASED; urgency=low
   [ Michael Vogt ]
   * vendor/getinfo:
     - fix ubuntu-codename
+  * vendor/steamos/*:
+    - add steamos support
 
  -- Christian Perrier <bubulle@debian.org>  Sun, 15 Dec 2013 08:43:06 +0100
 
